# MIAGE-Port-Management

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  UML.puml  gestionPort.cpp  gestionPort.h  main.cpp
Bateau/: Bateau.cpp
Client/: Client.cpp  Client.h
Data/: Data.cpp  Data.h
Date/: Date.cpp  Date.h
GestionPort/: GestionPort.cpp  GestionPort.h
Interface/: Interface.cpp  Interface.h
Place/: Place.cpp  Place.h
Reservation/: Reservation.cpp  Reservation.h
include/: Bateau.h  BateauType.h  Calendrier.h  Client.h  Data.h  Date.h  GestionPort.h  Interface.h  NombrePlaces.h  Paiement.h  Place.h  Reservation.h  Tarifs.h  XMLClient.h  XMLPlaces.h
include/data/: Data.h  DataClient.h  DataDate.h  DataPlace.h  DataReservation.h  XMLFilesName.h  XMLReservations.h
src/: Bateau.cpp  Client.cpp  Data.cpp  Date.cpp  GestionPort.cpp  Interface.cpp  Paiement.cpp  Place.cpp  Reservation.cpp  Tarifs.cpp  tinyxml2.cpp  xmltest.cpp
src/data/: Data.cpp  DataClient.cpp  DataDate.cpp  DataPlace.cpp  DataReservation.cpp
xml/: Clients.xml  Places.xml  Reservations.xml
